--- a/src/App.css
+++ b/src/App.css
@@ -16,16 +16,21 @@ body {
   font-family: 'Open Sans', sans-serif;  
 }
 
-.App-logo {
-  height: 80px;
-  float: left;
+.logo-top, .enroll-today, .verification, .zingo-cash {
+  background: url('./img/Zingo-Cash-sprite.png');
+  background-repeat: no-repeat;  
 }
 
-.top-header {
+.logo-top {
+  background-position: -57px -270px;
+	width: 155px;
+	height: 97px;
+  margin: 10px 10px 10px 100px;
+}
+
+header {
   background-color: var(--light-blue-color);
-  height: 35px;
-  /* padding: 20px; */
-  /* color: white; */
+  height: 32px;
 }
 
 .title {
@@ -36,27 +41,33 @@ body {
   font-size: .75rem;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-.top-nav {
+#top-header-list {
   display: flex;
-  flex-direction: row;
   justify-content: flex-end;
+  font-size: .65rem;
+  margin: 0 100px 0 0;
 }
 
-.nav-login {
+.login {
   color: var(--blue-color);
   margin-right: 10px;
+  font-weight: bold;
 }
 
-.nav-phone {
+.phone {
   margin: 0 20px;
 }
 
-.nav-facebook {
-  height: 24px;
+.facebook {
+  height: 20px;
+  vertical-align: middle;
+}
+
+#nav-list {
+  display: flex;
+  /* justify-content: flex-end; */
+  /* font-size: .65rem; */
+  margin: 0 100px;
 }
 
 .enroll {
@@ -66,4 +77,10 @@ body {
 
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
