working on responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,15 @@ body {
   color: var(--body-color);
   font-size: 16px;
   line-height: 24pt;
+  margin: 0;
 }
 
-.logo-top, .icon-enroll, .icon-apply, .icon-verification, .icon-zingocash, .icon-arrow {
+/* .App {
+  margin: 0;
+  padding: 0;
+} */
+
+.logo-top, .logo-bottom, .icon-enroll, .icon-apply, .icon-verification, .icon-zingocash, .icon-arrow {
   background: url('./img/Zingo-Cash-sprite.png');
   background-repeat: no-repeat;  
 }
@@ -23,14 +29,15 @@ body {
   background-position: -57px -270px;
 	width: 155px;
 	height: 97px;
-  margin: 0 10px;
-  transform: scale(0.7);
+  margin: 10px 50px 10px 0;
 }
 
 .logo-bottom {  
   background-position: -329px -255px;;
   width: 202px;
-	height: 127px;
+  height: 127px;
+  margin: 0;
+  transform: scale(0.7);  
 }
 
 .icon-enroll {
@@ -65,17 +72,31 @@ body {
   margin-top: -30px;
 }
 
+.header {
+
+}
+
 .top-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: var(--light-blue-color);
-  height: 32px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  padding-left: 425px;
 }
 
 #top-header-list {
   display: flex;
-  justify-content: flex-end;
-  font-size: .65rem;
+  align-items: center;
+}
+#top-header-list li {
+  display: flex;
+  font-size: .75rem;
   font-weight: bold;  
-  margin: 0 100px 0 0;
+  text-align: right;
 }
 
 li p {
@@ -98,21 +119,28 @@ li p {
 }
 
 .main-nav {
+  position: fixed;
+  top: 40px;
+  left: 0;
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   line-height: 50px;
+  font-size: 1rem;
+  background-color: white;
 }
 
 #nav-list {
+  align-items: center;
   display: flex;
-  flex-direction: row;
-  margin: 0 15px;
+  flex-wrap: wrap;
+  margin: 0 50px;
 }
 
 #nav-list li {
-  margin: 0 15px;
+  margin: 0 10px;
+  min-width: 118px;
 }
 
 #nav-list button {
@@ -122,15 +150,14 @@ li p {
   font-size: 1rem;
   width: 148px;
   height: 40px;
+  padding: 0;
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
+  margin-top: 160px;
 }
 
 .main-hero {
-  /* display: flex; */
   width: 100%;
 }
 
@@ -145,12 +172,12 @@ li p {
   z-index: 10;
   width: 100%;
   margin-top: -150px;
-  position: absolute;
+  /* position: absolute; */
   text-align: left;
   color: white;
-  padding: 38px 50px;
+  padding: 38px 0;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
 }
 
 .hero-text {
@@ -175,7 +202,7 @@ li p {
   height: 44px;
   color: white;
   align-self: center;
-  margin: 0 auto;
+  margin: 0 150px;
   font-weight: bold;
   font-size: 1rem;
 }
@@ -241,6 +268,63 @@ li p {
   margin: 10px 100px 0;
   width: 42%; 
   line-height: 24px; 
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  padding: 35px 150px 35px 100px;
+  text-align: left;
+  justify-content: center;  
+  align-items: center;
+}
+
+.links-logo-phone {
+  flex-direction: column;
+  text-align: center;
+}
+
+.links-phone {
+  margin: 0;
+  align-self: center;
+}
+
+.links-1 {
+  padding: 0 100px 0 50px;
+}
+
+.links-2 {
+  padding: 0 50px;
+}
+
+.links-1 li, .links-2 li {
+  line-height: 18px;
+  font-size: .75rem;  
+  justify-content: center;
+  align-content: center;
+}
+
+.footer {
+  background-color: var(--light-blue-color);
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#footer-list{
+  display: flex;
+  justify-content: flex-start;
+  font-size: .65rem;
+  font-weight: bold;  
+}
+
+#footer-list li {
+  padding-right: 25px;
+}
+
+#footer-list p {
+  padding-left: 200px;
 }
 
 a {
