--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,9 @@ body {
   margin: 0;
 }
 
-/* .App {
-  margin: 0;
-  padding: 0;
-} */
+header, .top-header {
+  z-index: 11;
+}
 
 .logo-top, .logo-bottom, .icon-enroll, .icon-apply, .icon-verification, .icon-zingocash, .icon-arrow {
   background: url('./img/Zingo-Cash-sprite.png');
@@ -27,9 +26,9 @@ body {
 
 .logo-top {
   background-position: -57px -270px;
-	width: 155px;
-	height: 97px;
-  margin: 10px 50px 10px 0;
+  width: 155px;
+  height: 97px;
+  margin: 10px auto;
 }
 
 .logo-bottom {  
@@ -42,38 +41,38 @@ body {
 
 .icon-enroll {
   background-position: -39px -22px;
-	width: 192px;
-	height: 191px;
+  width: 192px;
+  height: 191px;
+  transform: scale(.8)  
 }
 
 .icon-apply {
   background-position: -339px -22px;
-	width: 192px;
-	height: 191px;
+  width: 192px;
+  height: 191px;
+  transform: scale(.8)  
 }
 
 .icon-verification {
   background-position: -641px -23px;
-	width: 191px;
-	height: 190px;
+  width: 191px;
+  height: 190px;
+  transform: scale(.8)  
 }
 
 .icon-zingocash {
   background-position: -939px -22px;
-	width: 192px;
-	height: 191px;
+  width: 192px;
+  height: 191px;
+  transform: scale(.8)  
 }
 
 .icon-arrow {
   background-position: -662px -257px;
-	width: 19px;
+  width: 19px;
   height: 23px;
   align-self: center;
-  margin-top: -30px;
-}
-
-.header {
-
+  margin-top: 10px;
 }
 
 .top-header {
@@ -85,12 +84,16 @@ body {
   height: 40px;
   display: flex;
   justify-content: center;
-  padding-left: 425px;
+  margin: 0 auto;
+  align-content: center;
+  
 }
 
 #top-header-list {
   display: flex;
   align-items: center;
+  justify-content: center;
+  align-content: center;
 }
 #top-header-list li {
   display: flex;
@@ -122,20 +125,19 @@ li p {
   position: fixed;
   top: 40px;
   left: 0;
-  width: 100%;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  line-height: 50px;
   font-size: 1rem;
   background-color: white;
+  width: 100%;
 }
 
 #nav-list {
   align-items: center;
   display: flex;
-  flex-wrap: wrap;
-  margin: 0 50px;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 100%;
 }
 
 #nav-list li {
@@ -151,10 +153,17 @@ li p {
   width: 148px;
   height: 40px;
   padding: 0;
+  margin: 0 0 10px;
 }
 
 .main {
-  margin-top: 160px;
+  margin-top: 365px;
+  display: flex;
+  flex-direction: column;
+}
+
+img {
+  /* width: 100%; */
 }
 
 .main-hero {
@@ -162,27 +171,31 @@ li p {
 }
 
 .hero {
-  width: 100%;
+  object-fit: cover;
   z-index: 0;
-  margin: 0;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .hero-overlay {
   background-color: rgba(58, 65, 154, 0.85);
   z-index: 10;
   width: 100%;
-  margin-top: -150px;
+  /* margin-top: -150px; */
   /* position: absolute; */
-  text-align: left;
+  text-align: center;
   color: white;
   padding: 38px 0;
   display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
 .hero-text {
   flex-direction: column; 
-  margin-left: 100px; 
+  width: 375px;
 }
 
 .title {
@@ -217,24 +230,24 @@ li p {
 }
 
 .process h2 {
-  font-size: 2.25rem;
+  font-size: 1.75rem;
   font-weight: normal;
-  margin: 0 0 35px;
-  letter-spacing: 2px;
+  margin: 0 0 15px;
+  letter-spacing: 1px;
 }
 
 .icons-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .icons-list li {
   justify-content: space-between;
-  padding: 0 40px;
+  padding: 10px;
 }
 
 .icon-text {
-  font-size: 1.25rem;
+  font-size: 1rem;
   padding-top: 15px;
 }
 
@@ -243,18 +256,23 @@ li p {
 }
 
 .banner {
-  width: 100%;
+  height: 300px;
+  object-fit: cover;  
   z-index: 0;
   margin: 0;  
+  width: 100%;
+  
 }
 
 .banner-overlay {
   z-index: 10;
   position: absolute;
-  margin-top: -250px;  
-  text-align: left;
+  margin-top: -260px;  
+  text-align: center;
   color: white;
-  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title-banner {
@@ -265,23 +283,22 @@ li p {
 }
 
 .sub-title-banner {
-  margin: 10px 100px 0;
+  margin: 10px 0 0;
   width: 42%; 
   line-height: 24px; 
 }
 
 .links {
   display: flex;
-  flex-direction: row;
-  padding: 35px 150px 35px 100px;
-  text-align: left;
+  flex-direction: column;
+  padding: 10px;
+  text-align: center;
   justify-content: center;  
   align-items: center;
 }
 
 .links-logo-phone {
   flex-direction: column;
-  text-align: center;
 }
 
 .links-phone {
@@ -290,11 +307,11 @@ li p {
 }
 
 .links-1 {
-  padding: 0 100px 0 50px;
+  padding: 10px 0 0;
 }
 
 .links-2 {
-  padding: 0 50px;
+  padding: 0 0 10px;
 }
 
 .links-1 li, .links-2 li {
@@ -314,17 +331,19 @@ li p {
 
 #footer-list{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   font-size: .65rem;
-  font-weight: bold;  
+  font-weight: bold; 
+  flex-wrap: wrap;
+  padding: 10px; 
 }
 
 #footer-list li {
-  padding-right: 25px;
+  padding-right: 10px;
 }
 
 #footer-list p {
-  padding-left: 200px;
+  /* padding-left: 200px; */
 }
 
 a {
@@ -344,4 +363,335 @@ ul {
 
 h1 {
   font-weight: normal;  
+}
+
+
+@media (min-width: 1200px) {
+  .logo-top {
+    background-position: -57px -270px;
+    width: 155px;
+    height: 97px;
+    margin: 10px 50px 10px 0;
+  }
+  
+  .logo-bottom {  
+    background-position: -329px -255px;;
+    width: 202px;
+    height: 127px;
+    margin: 0;
+    transform: scale(0.7);  
+  }
+  
+  .icon-enroll {
+    background-position: -39px -22px;
+    width: 192px;
+    height: 191px;
+    transform: scale(.8)  
+  }
+  
+  .icon-apply {
+    background-position: -339px -22px;
+    width: 192px;
+    height: 191px;
+    transform: scale(.8)  
+  }
+  
+  .icon-verification {
+    background-position: -641px -23px;
+    width: 191px;
+    height: 190px;
+    transform: scale(.8)  
+  }
+  
+  .icon-zingocash {
+    background-position: -939px -22px;
+    width: 192px;
+    height: 191px;
+    transform: scale(.8)  
+  }
+  
+  .icon-arrow {
+    background-position: -662px -257px;
+    width: 19px;
+    height: 23px;
+    align-self: center;
+    margin-top: 10px;
+  }
+  
+  .top-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 400px;
+    background-color: var(--light-blue-color);
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-content: center;
+    padding-left: 425px;        
+  }
+  
+  #top-header-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+  }
+  #top-header-list li {
+    display: flex;
+    font-size: .75rem;
+    font-weight: bold;  
+    text-align: right;
+  }
+  
+  li p {
+    margin: 0 5px;
+  }
+  
+  .login {
+    color: var(--green-color);
+    margin-right: 30px;
+  }
+  
+  .phone {
+    margin: 0 20px;
+  }
+  
+  .facebook {
+    height: 20px;
+    vertical-align: middle;
+    margin-left: 15px;
+  }
+  
+  .main-nav {
+    position: fixed;
+    top: 40px;
+    left: 0;
+    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    line-height: 50px;
+    font-size: 1rem;
+    background-color: white;
+  }
+  
+  #nav-list {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 100%;
+  }
+  
+  #nav-list li {
+    margin: 0 10px;
+    min-width: 118px;
+  }
+  
+  #nav-list button {
+    background-color: var(--orange-color);
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    width: 148px;
+    height: 40px;
+    padding: 0;
+  }
+  
+  .main {
+    margin-top: 160px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .main-hero {
+    width: 100%;
+  }
+  
+  .hero {
+    width: 100%;
+    z-index: 0;
+    margin: 0;
+  }
+  
+  .hero-overlay {
+    background-color: rgba(58, 65, 154, 0.85);
+    z-index: 10;
+    width: 100%;
+    margin-top: -150px;
+    /* position: absolute; */
+    text-align: left;
+    color: white;
+    padding: 38px 0;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .hero-text {
+    flex-direction: column; 
+    /* margin-left: 100px;  */
+  }
+  
+  .title {
+    font-size: 2.5rem;
+    margin: 0;
+  }
+  
+  .sub-title {
+    font-size: .75rem;
+    margin: 0;
+    
+  }
+  
+  .enroll {
+    background-color: var(--green-color);
+    width: 187px;
+    height: 44px;
+    color: white;
+    align-self: center;
+    margin: 0 150px;
+    font-weight: bold;
+    font-size: 1rem;
+  }
+  
+  .process {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 75px auto;
+  }
+  
+  .process h2 {
+    font-size: 2.25rem;
+    font-weight: normal;
+    margin: 0 0 35px;
+    letter-spacing: 2px;
+  }
+  
+  .icons-list {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .icons-list li {
+    justify-content: space-between;
+    padding: 0 40px;
+  }
+  
+  .icon-text {
+    font-size: 1.25rem;
+    padding-top: 15px;
+  }
+  
+  .bottom-banner {
+    width: 100%;
+  }
+  
+  .banner {
+    width: 100%;
+    z-index: 0;
+    margin: 0;  
+  }
+  
+  .banner-overlay {
+    z-index: 10;
+    position: absolute;
+    margin-top: -250px;  
+    text-align: left;
+    color: white;
+    align-self: center;
+  }
+  
+  .title-banner {
+    margin: 0 100px 0;
+    font-size: 2.5rem;
+    font-weight: bold;
+    letter-spacing: 2px;  
+  }
+  
+  .sub-title-banner {
+    margin: 10px 100px 0;
+    width: 42%; 
+    line-height: 24px; 
+  }
+  
+  .links {
+    display: flex;
+    flex-direction: row;
+    padding: 35px 150px 35px 100px;
+    text-align: left;
+    justify-content: center;  
+    align-items: center;
+  }
+  
+  .links-logo-phone {
+    flex-direction: column;
+    text-align: center;
+  }
+  
+  .links-phone {
+    margin: 0;
+    align-self: center;
+  }
+  
+  .links-1 {
+    padding: 0 100px 0 50px;
+  }
+  
+  .links-2 {
+    padding: 0 50px;
+  }
+  
+  .links-1 li, .links-2 li {
+    line-height: 18px;
+    font-size: .75rem;  
+    justify-content: center;
+    align-content: center;
+  }
+  
+  .footer {
+    background-color: var(--light-blue-color);
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  #footer-list{
+    display: flex;
+    justify-content: flex-start;
+    font-size: .65rem;
+    font-weight: bold;  
+  }
+  
+  #footer-list li {
+    padding-right: 25px;
+  }
+  
+  #footer-list p {
+    padding-left: 200px;
+  }
+  
+  a {
+    text-decoration: none;
+    color: var(--body-color);
+  }
+  
+  button {
+    border: none;
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1 {
+    font-weight: normal;  
+  }  
 }
