--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
 }
 
-header, .top-header {
+header, .top-header, .main-nav {
   z-index: 11;
 }
 
@@ -142,7 +142,6 @@ li p {
 
 #nav-list li {
   margin: 0 10px;
-  min-width: 118px;
 }
 
 #nav-list button {
@@ -216,7 +215,7 @@ img {
   color: white;
   align-self: center;
   margin: 0 150px;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 1rem;
 }
 
@@ -253,6 +252,11 @@ img {
 
 .bottom-banner {
   width: 100%;
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .banner {
@@ -265,9 +269,7 @@ img {
 }
 
 .banner-overlay {
-  z-index: 10;
   position: absolute;
-  margin-top: -260px;  
   text-align: center;
   color: white;
   display: flex;
@@ -284,7 +286,7 @@ img {
 
 .sub-title-banner {
   margin: 10px 0 0;
-  width: 42%; 
+  width: 375px; 
   line-height: 24px; 
 }
 
@@ -367,13 +369,16 @@ h1 {
 
 
 @media (min-width: 1200px) {
+  /* header, .top-header {
+    z-index: 11;
+  } */
+  
   .logo-top {
     background-position: -57px -270px;
     width: 155px;
     height: 97px;
     margin: 10px 50px 10px 0;
   }
-  
   .logo-bottom {  
     background-position: -329px -255px;;
     width: 202px;
@@ -381,35 +386,30 @@ h1 {
     margin: 0;
     transform: scale(0.7);  
   }
-  
   .icon-enroll {
     background-position: -39px -22px;
     width: 192px;
     height: 191px;
     transform: scale(.8)  
-  }
-  
+  }  
   .icon-apply {
     background-position: -339px -22px;
     width: 192px;
     height: 191px;
     transform: scale(.8)  
   }
-  
   .icon-verification {
     background-position: -641px -23px;
     width: 191px;
     height: 190px;
     transform: scale(.8)  
   }
-  
   .icon-zingocash {
     background-position: -939px -22px;
     width: 192px;
     height: 191px;
     transform: scale(.8)  
   }
-  
   .icon-arrow {
     background-position: -662px -257px;
     width: 19px;
@@ -417,21 +417,19 @@ h1 {
     align-self: center;
     margin-top: 10px;
   }
-  
   .top-header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 400px;
+    width: 100%;
     background-color: var(--light-blue-color);
     height: 40px;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     margin: 0 auto;
-    align-content: center;
-    padding-left: 425px;        
+    /* align-content: center; */
+    padding-left: 800px;        
   }
-  
   #top-header-list {
     display: flex;
     align-items: center;
@@ -444,118 +442,110 @@ h1 {
     font-weight: bold;  
     text-align: right;
   }
-  
   li p {
     margin: 0 5px;
   }
-  
   .login {
     color: var(--green-color);
     margin-right: 30px;
-  }
-  
+  }  
   .phone {
     margin: 0 20px;
   }
-  
   .facebook {
     height: 20px;
     vertical-align: middle;
     margin-left: 15px;
   }
-  
   .main-nav {
     position: fixed;
     top: 40px;
     left: 0;
-    width: 400px;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     line-height: 50px;
     font-size: 1rem;
     background-color: white;
+    z-index: 11;
   }
-  
   #nav-list {
+    flex-direction: row;    
     align-items: center;
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
     width: 100%;
+    padding: 0 25px;
   }
-  
   #nav-list li {
     margin: 0 10px;
-    min-width: 118px;
   }
-  
   #nav-list button {
     background-color: var(--orange-color);
     color: white;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 1rem;
     width: 148px;
     height: 40px;
-    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0;
   }
-  
   .main {
     margin-top: 160px;
     display: flex;
     flex-direction: column;
   }
-  
   .main-hero {
     width: 100%;
   }
-  
   .hero {
     width: 100%;
     z-index: 0;
     margin: 0;
   }
-  
   .hero-overlay {
     background-color: rgba(58, 65, 154, 0.85);
     z-index: 10;
     width: 100%;
-    margin-top: -150px;
-    /* position: absolute; */
+    margin-top: -122px;
+    position: absolute;
     text-align: left;
     color: white;
-    padding: 38px 0;
+    padding: 25px 0;
     display: flex;
+    flex-direction: row;
     justify-content: center;
   }
-  
   .hero-text {
     flex-direction: column; 
-    /* margin-left: 100px;  */
+    width: 600px;
   }
-  
   .title {
     font-size: 2.5rem;
     margin: 0;
   }
-  
   .sub-title {
     font-size: .75rem;
     margin: 0;
-    
+    line-height: 24px;
+    width: 600px;    
   }
-  
   .enroll {
     background-color: var(--green-color);
     width: 187px;
     height: 44px;
     color: white;
     align-self: center;
-    margin: 0 150px;
-    font-weight: bold;
+    margin: 0 100px;
+    font-weight: normal;
     font-size: 1rem;
   }
-  
   .process {
     width: 100%;
     display: flex;
@@ -563,62 +553,53 @@ h1 {
     justify-content: space-around;
     align-items: center;
     margin: 75px auto;
-  }
-  
+  }  
   .process h2 {
     font-size: 2.25rem;
     font-weight: normal;
     margin: 0 0 35px;
     letter-spacing: 2px;
   }
-  
   .icons-list {
     display: flex;
     flex-direction: row;
   }
-  
   .icons-list li {
     justify-content: space-between;
     padding: 0 40px;
   }
-  
   .icon-text {
     font-size: 1.25rem;
     padding-top: 15px;
   }
-  
   .bottom-banner {
     width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
   }
-  
   .banner {
     width: 100%;
     z-index: 0;
     margin: 0;  
   }
-  
   .banner-overlay {
-    z-index: 10;
     position: absolute;
-    margin-top: -250px;  
     text-align: left;
     color: white;
-    align-self: center;
+    display: flex;
   }
-  
   .title-banner {
-    margin: 0 100px 0;
+    margin: 0 250px 0;
     font-size: 2.5rem;
     font-weight: bold;
-    letter-spacing: 2px;  
+    letter-spacing: 2px;
+    width: 375px;    
   }
-  
   .sub-title-banner {
-    margin: 10px 100px 0;
-    width: 42%; 
+    margin: 10px 250px 0;
+    width: 375px;
     line-height: 24px; 
   }
-  
   .links {
     display: flex;
     flex-direction: row;
@@ -627,32 +608,26 @@ h1 {
     justify-content: center;  
     align-items: center;
   }
-  
   .links-logo-phone {
     flex-direction: column;
     text-align: center;
   }
-  
   .links-phone {
     margin: 0;
     align-self: center;
   }
-  
   .links-1 {
     padding: 0 100px 0 50px;
   }
-  
   .links-2 {
     padding: 0 50px;
   }
-  
   .links-1 li, .links-2 li {
     line-height: 18px;
     font-size: .75rem;  
     justify-content: center;
     align-content: center;
   }
-  
   .footer {
     background-color: var(--light-blue-color);
     bottom: 0;
@@ -660,37 +635,30 @@ h1 {
     display: flex;
     justify-content: center;
   }
-  
   #footer-list{
     display: flex;
     justify-content: flex-start;
     font-size: .65rem;
     font-weight: bold;  
   }
-  
   #footer-list li {
     padding-right: 25px;
   }
-  
   #footer-list p {
     padding-left: 200px;
   }
-  
   a {
     text-decoration: none;
     color: var(--body-color);
   }
-  
   button {
     border: none;
   }
-  
   ul {
     list-style: none;
     margin: 0;
     padding: 0;
   }
-  
   h1 {
     font-weight: normal;  
   }  
